<resources>
    <string name="app_name">Movies</string>
    <string name="MovieAPIKey">25c4095aa59cd1e69e38e9933640ce6b</string>

    <string name="no_internet_error_message">No internet connection</string>
    <string name="list_loading_error_message">Error loading movies</string>
    <string name="individual_movie_error_message">Error loading this movie</string>

    <string name="rating_label">Rating</string>
    <string name="release_date_label">Release Date</string>

    <string name="popular_menu_filter_label">Popular</string>
    <string name="top_rated_menu_filter_label">Top Rated</string>
    <string name="favorite_menu_filter_label">Favorites</string>

    <string name="overview_caption">Overview:</string>

    <string name="trailer_caption">Trailers:</string>
    <string name="list_prefix">\u2022</string>

    <string name="review_caption">Reviews:</string>
    <string name="review_author">Author:</string>
    <string name="review_external_link">CLICK FOR SOURCE</string>

    <string name="MovieParcelableKey">movie</string>
    <string name="MovieListParcelableKey">movie_list</string>

    <string name="movie_picture_content_description">movie poster</string>

    <string name="button_text_FAVORITE">Add To Favorites</string>
    <string name="button_text_UNFAVORITE">Unfavorite</string>

    <string name="Key_FilterTypeSharedPreferences">filter</string>
    <string name="FilterTypeForSharedPreferences_Popular">popular</string>
    <string name="FilterTypeForSharedPreferences_TopRated">toprated</string>
    <string name="FilterTypeForSharedPreferences_Favorite">favorite</string>
</resources>
